--- a/Team18/Code18/SPA/SPA.vcxproj
+++ b/Team18/Code18/SPA/SPA.vcxproj
@@ -18,7 +18,7 @@
     <ClCompile Include="..\source\Parser.cpp" />
     <ClCompile Include="..\source\PKB.cpp" />
     <ClCompile Include="..\source\PKBCall.cpp" />
-    <ClCompile Include="..\source\PKBFollow.cpp" />
+    <ClCompile Include="..\source\PKBFollows.cpp" />
     <ClCompile Include="..\source\PKBModifies.cpp" />
     <ClCompile Include="..\source\PKBNext.cpp" />
     <ClCompile Include="..\source\PKBParent.cpp" />
@@ -41,7 +41,7 @@
     <ClInclude Include="..\source\Parser.h" />
     <ClInclude Include="..\source\PKB.h" />
     <ClInclude Include="..\source\PKBCall.h" />
-    <ClInclude Include="..\source\PKBFollow.h" />
+    <ClInclude Include="..\source\PKBFollows.h" />
     <ClInclude Include="..\source\PKBHash.h" />
     <ClInclude Include="..\source\PKBModifies.h" />
     <ClInclude Include="..\source\PKBNext.h" />
