Flattened Print/Read Table

--- a/Team18/Code18/SPA/SPA.vcxproj.filters
+++ b/Team18/Code18/SPA/SPA.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="..\source\PKBFollows.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\PKBPrint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\PKBRead.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\PKB.h">
@@ -141,6 +147,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\source\PKBFollows.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\PKBPrint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\PKBRead.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
