--- a/Team18/Code18/SPA/SPA.vcxproj
+++ b/Team18/Code18/SPA/SPA.vcxproj
@@ -22,7 +22,9 @@
     <ClCompile Include="..\source\PKBModifies.cpp" />
     <ClCompile Include="..\source\PKBNext.cpp" />
     <ClCompile Include="..\source\PKBParent.cpp" />
+    <ClCompile Include="..\source\PKBPrint.cpp" />
     <ClCompile Include="..\source\PKBProcedure.cpp" />
+    <ClCompile Include="..\source\PKBRead.cpp" />
     <ClCompile Include="..\source\PKBStmt.cpp" />
     <ClCompile Include="..\source\PKBUses.cpp" />
     <ClCompile Include="..\source\PKBVariable.cpp" />
@@ -46,7 +48,9 @@
     <ClInclude Include="..\source\PKBModifies.h" />
     <ClInclude Include="..\source\PKBNext.h" />
     <ClInclude Include="..\source\PKBParent.h" />
+    <ClInclude Include="..\source\PKBPrint.h" />
     <ClInclude Include="..\source\PKBProcedure.h" />
+    <ClInclude Include="..\source\PKBRead.h" />
     <ClInclude Include="..\source\PKBStmt.h" />
     <ClInclude Include="..\source\PKBUses.h" />
     <ClInclude Include="..\source\PKBVariable.h" />
