Flattened Constant Table

--- a/Team18/Code18/SPA/SPA.vcxproj
+++ b/Team18/Code18/SPA/SPA.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="..\source\Parser.cpp" />
     <ClCompile Include="..\source\PKB.cpp" />
     <ClCompile Include="..\source\PKBCall.cpp" />
+    <ClCompile Include="..\source\PKBConstant.cpp" />
     <ClCompile Include="..\source\PKBFollows.cpp" />
     <ClCompile Include="..\source\PKBModifies.cpp" />
     <ClCompile Include="..\source\PKBNext.cpp" />
@@ -43,6 +44,7 @@
     <ClInclude Include="..\source\Parser.h" />
     <ClInclude Include="..\source\PKB.h" />
     <ClInclude Include="..\source\PKBCall.h" />
+    <ClInclude Include="..\source\PKBConstant.h" />
     <ClInclude Include="..\source\PKBFollows.h" />
     <ClInclude Include="..\source\PKBHash.h" />
     <ClInclude Include="..\source\PKBModifies.h" />
