--- a/Team18/Code18/SPA/SPA.vcxproj.filters
+++ b/Team18/Code18/SPA/SPA.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="..\source\PKBRead.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\PKBConstant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\PKB.h">
@@ -153,6 +156,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\source\PKBRead.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\PKBConstant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
