--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj
@@ -162,8 +162,12 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestDesignExtractor.cpp" />
-    <ClCompile Include="TestPKBFollow.cpp" />
+    <ClCompile Include="TestPKBCall.cpp" />
+    <ClCompile Include="TestPKBConstant.cpp" />
+    <ClCompile Include="TestPKBFollows.cpp" />
+    <ClCompile Include="TestPKBIf.cpp" />
+    <ClCompile Include="TestPKBModifies.cpp" />
+    <ClCompile Include="TestPKBNext.cpp" />
     <ClCompile Include="TestPKBParent.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -172,6 +176,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TestAST.cpp" />
+    <ClCompile Include="TestPKBPrint.cpp" />
+    <ClCompile Include="TestPKBProcedure.cpp" />
+    <ClCompile Include="TestPKBRead.cpp" />
+    <ClCompile Include="TestPKBStmt.cpp" />
+    <ClCompile Include="TestPKBVariable.cpp" />
+    <ClCompile Include="TestPKBWhile.cpp" />
     <ClCompile Include="TestProgramParser.cpp" />
     <ClCompile Include="TestQueryParser.cpp" />
     <ClCompile Include="TestPreprocessor.cpp" />
