--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClCompile Include="TestPKBNext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestPKBUses.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
