--- a/Team18/Code18/SPA/SPA.vcxproj
+++ b/Team18/Code18/SPA/SPA.vcxproj
@@ -32,11 +32,11 @@
     <ClCompile Include="..\source\PKBStmt.cpp" />
     <ClCompile Include="..\source\PKBUses.cpp" />
     <ClCompile Include="..\source\PKBVariable.cpp" />
-    <ClCompile Include="..\source\Preprocessor.cpp" />
     <ClCompile Include="..\source\Query.cpp" />
     <ClCompile Include="..\source\QueryParser.cpp" />
     <ClCompile Include="..\source\PatternProcessor.cpp" />
     <ClCompile Include="..\source\Result.cpp" />
+    <ClCompile Include="..\source\Validator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\AbstractType.h" />
@@ -69,6 +69,7 @@
     <ClInclude Include="..\source\Relationship.h" />
     <ClInclude Include="..\source\PatternProcessor.h" />
     <ClInclude Include="..\source\Result.h" />
+    <ClInclude Include="..\source\Validator.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{DC21A1EA-D2C6-4D14-A2B4-E025B64BDE81}</ProjectGuid>
