--- a/Team18/Code18/UnitTesting/UnitTesting.vcxproj
+++ b/Team18/Code18/UnitTesting/UnitTesting.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="TestPKBUses.cpp" />
     <ClCompile Include="TestPKBUsesProc.cpp" />
     <ClCompile Include="TestPKBVariable.cpp" />
+    <ClCompile Include="TestPKBWith.cpp" />
     <ClCompile Include="TestProgramParser.cpp" />
     <ClCompile Include="TestQueryParser.cpp" />
     <ClCompile Include="TestPreprocessor.cpp" />
